# healthcare-ml

./: .gitignore  Dockerfile  README.md  db_setup.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
airflow/dags/: healthcare_ml_dag.py
app/: main.py
database/: db_connection.py  models.py
disease.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: index.html
ml/: preprocess.py  train.py
models/: final_model.joblib  label_encoder.joblib  onehot_encoder.joblib  scaler.joblib
notebooks/: analysis.ipynb
scripts/: clean.py  ingest.py  load.py
